# file-strings-sorting

./: CMakeLists.txt  README.md  build.sh  main.c  run.sh
examples/: test1.txt
include/: conversion.h  files.h  line_conversion.h  types.h  types_split.h  utils.h
include/tests/: test_conversion.h  test_global.h  test_utils.h
src/: conversion.c  files.c  types_split.c  utils.c
tests/: CMakeLists.txt  build-unit-tests.sh  build.sh  main.c  run-black-box-tests.sh  run-tests.sh  run-white-box-tests.sh  run.sh
tests/examples/err_in/: 1.txt  2.txt  3.txt  4.txt
tests/examples/in/: 2.txt  3.txt  4.txt  5.txt
tests/include/: test_conversion.h  test_global.h  test_types_split.h  test_utils.h
tests/src/: test_conversion.c  test_types_split.c  test_utils.c
